# trading_research

./: .env  .env.example  .gitattributes  .gitignore  PROGRAM_DECISION.md  README.md  alpaca_2fa_backup.txt  pyproject.toml  requirements.txt
.github/workflows/: canary.yml  llm_bot.yml  spike_cross_asset.yml
configs/: data_ingestion.yaml  research_status.yaml
configs/backtests/: long_flat_v1.yaml
configs/diagnostics/: execution_robustness_v1.yaml  regime_filters_v1.yaml  score_deciles_v1.yaml
configs/experiments/: canary_apt.yaml  canary_sui.yaml  crypto_1h_exp001.yaml  crypto_1h_exp002.yaml  crypto_1h_exp003.yaml  crypto_1h_exp004.yaml  crypto_1h_exp005.yaml  crypto_1h_exp006.yaml  crypto_1h_exp007.yaml  crypto_1h_exp008.yaml  crypto_1h_exp009.yaml  crypto_1h_exp010.yaml  crypto_1h_exp011.yaml  crypto_1h_exp012.yaml  crypto_1h_exp013.yaml  crypto_1h_exp015.yaml  crypto_1h_exp016.yaml  crypto_1h_exp017.yaml  crypto_1h_exp018.yaml  crypto_1h_exp019.yaml  crypto_1h_exp020.yaml  crypto_exp025.yaml  crypto_exp026.yaml  crypto_exp027.yaml  crypto_exp029.yaml  crypto_flow_exp022.yaml  crypto_microstructure_exp023.yaml  crypto_microstructure_exp024.yaml  crypto_ticks_exp014.yaml
configs/features/: baseline_features_v1.yaml
configs/labels/: horizon_labels_v1.yaml  multi_horizon_labels_v1.yaml
configs/models/: lightgbm_v1.yaml  logistic_v1.yaml
data/artifacts/: canary_alpaca_state.json
llm_paper_trader/: config.yaml  requirements.txt
llm_paper_trader/jobs/: 01_scan_markets.py  02_price_and_trade.py  03_grade_pnl.py  04_exit_manager.py  (+2 more)
src/: __init__.py
(+221 files in other folders)
